--- a/404.html
+++ b/404.html
@@ -4,7 +4,16 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Compromiso Escolar</title>
-        <?php include "assets/css/css.php"; ?>
+        <link rel="stylesheet" href="assets/js/bootstrap/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/aweasome/css/font-awesome.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/hover.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/paging.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/estilo.css">
+        <link rel="stylesheet" type="text/css" href="assets/js/alertifyjs/css/alertify.css">
+        <link rel="stylesheet" type="text/css" href="assets/js/datepicker/datepicker3.css">
+        <link rel="shortcut icon" href="assets/img/favicon.png">
+        <link rel="stylesheet" type="text/css" href="assets/librerias/vendor/datatables/datatables/media/css/jquery.dataTables.css">
+        <link rel="stylesheet" type="text/css" href="assets/librerias/vendor/datatables/datatables/media/css/dataTables.bootstrap4.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="assets/css/estilo_inicio.css">
         <script src="assets/js/jquery-1.10.2.js"></script>
@@ -129,10 +138,6 @@
                 </div>
             </div>
         </div>
-
-        <?php include "assets/js/js.php"; ?>
-        
-
         <style type="text/css">
             .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
                 font-weight: 900;
